# ai-dotfiles

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml  release.yml
knowledge/: AI-TOOLS-INTERPOLATION-RESEARCH.md
scripts/: README.md  release.sh  smoke-release.sh  update.sh
src/: README.md  constants.rs  embedded.rs  external_skills.rs  fs_ops.rs  lib.rs  main.rs  meta.rs  operations.rs  self_update.rs  tests.rs
static/: AGENTS.md  CLAUDE.md  _meta.md  _meta_template.md  external-skills.toml
static/.claude/: settings.json
static/.claude/agents/: database-specialist.md  design-architect.md  devops-specialist.md  docker-specialist.md  documentation-specialist.md  frontend-specialist.md  go-specialist.md  prompt-engineer.md  python-specialist.md  repository-maintainer.md  rust-specialist.md  security-reviewer.md  typescript-specialist.md  workflow-orchestrator.md
static/.claude/rules/: caveman-activate.md  chestertons-fence.md  code-change-workflow.md  commenting-standards.md  objective-files.md  project-guidelines.md  prompt-master.md
static/.claude/skills/: clean-code  conventional-branches  conventional-commits  design-patterns  devops-best-practices  docker-agents  docker-core  docker-errors  docker-impl  docker-syntax  documentation-best-practices  effective-go  frontend-design  gh-cli  hexagonal-architecture  markdown-to-html  mastering-typescript  mvvm-architecture  prompt-master  python-best-practices  react-best-practices  rust-best-practices  supabase-postgres-best-practices
static/.copilot/: hooks.json
static/.copilot/agents/: design-architect.agent.md  docker-specialist.agent.md  documentation-specialist.agent.md  frontend-specialist.agent.md  (+7 more)
static/.cursor/: hooks.json
(+169 files in other folders)
