[package]
name = "ai-dotfiles"
version = "2.1.1"
edition = "2021"
rust-version = "1.82"
description = "CLI to install, update and debloat Rafael Monteiro AI tool configuration"
authors = ["Rafael Monteiro <rafaelcmmm@icloud.com>"]
license = "MIT"
repository = "https://github.com/rafaelcmm/ai-dotfiles"
keywords = ["cli", "dotfiles", "ai", "copilot", "cursor", "claude"]
categories = ["command-line-utilities", "config"]

[[bin]]
name = "ai-dotfiles"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
include_dir = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
